fix word-wrap contacts

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -48,6 +48,10 @@
   font-size: 1.2em;
 }
 
+.word-wrap {
+  word-wrap: break-word;
+}
+
 
 /* material */
 .large-icon {
